# GAMES101-Assignments

./: .gitignore  README.md  Summary.md
assignment0/: CMakeLists.txt
assignment1/: CMakeLists.txt
assignment1/src/: main.cpp
assignment2/: CMakeLists.txt
assignment2/src/: main.cpp  rasterizer.cpp  rasterizer.hpp
assignment3/: CMakeLists.txt
assignment3/src/: Texture.hpp  main.cpp  rasterizer.cpp
assignment4/: CMakeLists.txt
assignment5/: CMakeLists.txt
assignment5/src/: Renderer.cpp  Triangle.hpp
assignment6/src/: BVH.cpp  Bounds3.hpp  Intersection.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
assignment7/: CMakeLists.txt
assignment7/src/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  global.hpp
